crates/tokmd-analysis-format/tests/snapshots/analysis_snapshot_w58__w58_analysis_md_imports_section.snap
---
source: crates/tokmd-analysis-format/tests/analysis_snapshot_w58.rs
expression: "text(render(&r, AnalysisFormat::Md).unwrap())"
---
# tokmd analysis

Preset: `receipt`

## Inputs

- `.`

## Imports

- Granularity: `module`

|From|To|Count|
|---|---|---:|
|core|types|25|
|format|types|18|
|cli|core|12|
