crates/tokmd-analysis-format/tests/snapshots/analysis_snapshot_w58__w58_analysis_md_license_section.snap
---
source: crates/tokmd-analysis-format/tests/analysis_snapshot_w58.rs
expression: "text(render(&r, AnalysisFormat::Md).unwrap())"
---
# tokmd analysis

Preset: `receipt`

## Inputs

- `.`

## License radar

- Effective: `MIT OR Apache-2.0`
- Heuristic detection; not legal advice.

|SPDX|Confidence|Source|Kind|
|---|---:|---|---|
|MIT|0.95|LICENSE-MIT|Text|
|Apache-2.0|0.92|LICENSE-APACHE|Text|
