crates/tokmd-analysis-format/tests/snapshots/analysis_snapshot_w58__w58_analysis_md_with_warnings.snap
---
source: crates/tokmd-analysis-format/tests/analysis_snapshot_w58.rs
expression: "text(render(&r, AnalysisFormat::Md).unwrap())"
---
# tokmd analysis

Preset: `receipt`

## Inputs

- `.`
